nextcloud-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: nextcloud
